// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for code (block) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  background-color: #f2f2f2;
  border-radius: 0.1rem;
  color: #435a6f;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

code.c0 {
  padding: 0.1rem 0.2rem;
}

pre.c0 {
  padding: 1rem;
}

<pre
  class="c0 c1"
>
  <code>
    test
  </code>
</pre>
`;

exports[`renders correctly for code (inline) 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0 {
  background-color: #f2f2f2;
  border-radius: 0.1rem;
  color: #435a6f;
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

code.c0 {
  padding: 0.1rem 0.2rem;
}

pre.c0 {
  padding: 1rem;
}

<code
  class="c0 c1"
>
  test
</code>
`;
